# Geminiassistant

./: .env.example  .replit  BOT_USAGE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  WEBHOOK_GUIDE.md  admin_controls.py  bot.py  config.py  docker-compose.yml  gemini_handler.py  main.py  pyproject.toml  replit.md  utils.py  webhook_server.py
static/: api_docs.html  dashboard.css  error.html  index.html
static/css/: dashboard.css
static/templates/: error.html  index.html  status.html
templates/: api_docs.html  status.html
